# madelink

./: CMakeLists.txt  LICENSE  README.md
.devcontainer/: .bashrc_devcontainer_addons  Dockerfile  devcontainer.json
master/: CMakeLists.txt  madelink_master.c
master/inc/: madelink_master.h
node/: CMakeLists.txt  madelink_node.c
node/inc/: madelink_node.h
shared/: CMakeLists.txt  madelink_shared.c
shared/inc/: madelink_shared.h
sigrok_decoder/: README.md  __init__.py  pd.py
sigrok_decoder/sub_decoders/: __init__.py  default.py
test/: CMakeLists.txt  madelink_master_test.c  madelink_node_test.c  test.c  test_properties.c  test_uart.c
test/inc/: madelink_master_test.h  madelink_node_test.h  test_properties.h  test_uart.h
